# quantum-state-space

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: liqss_default.yaml
scripts/: eval.py  train.py
src/liqss/: __init__.py  blocks.py  config.py  data.py  hippo.py  kernels.py  model.py  train.py  tt.py  utils.py
tests/: test_shapes.py
